2014-01-16  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.m:
        * EcAlarmDestination.h:
        * EcAlarmDestination.m:
	Remove experimental force clear method ... obey the KISS rule and
	stick to using domanange and unmanage methods for clearing on
	startup/shutdown. People wanting alars which persist after process
	shutdown should create a secondary managed object for them.

2013-11-04  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.m:
        * EcCommand.m:
        * EcClientI.h:
        * EcClientI.m:
        * EcAlarmDestination.h:
        Change error/alert logs to use alarm mechanism instead.

2013-08-20  Richard Frith-Macdonald <rfm@gnu.org>

        * EcConsole.m: Ignore exception printing message on shutdown.
        * EcProcess.m: Improve SIGHUP handling. Add new option for
        memory usage logging and increase default alert increments
        again. Make name of allowed usage config consistent with other
        names.  Add option to quit process when usage gets too high.

2013-08-05  Richard Frith-Macdonald <rfm@gnu.org>

        * AlarmTool.m: Tool to raise/clear alarms
        * LogTool.m: Tool to generate logs
        * Terminate.m: Cleanups
        * GNUmakefile: Build new tools
        * ECCL.h: Document new tools

2013-07-12  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.h: New method to get EC user directory
        * EcProcess.m: implement new method
        * EcCommand.m: Add simple auto compress/delete of logs
        CompressLogsAfter and DeleteLogsAfter control this.

2013-07-06  Richard Frith-Macdonald <rfm@gnu.org>

        * EcConsole.m: Strip spaces from command line to avoid a space
        at end of line causing the line terminator to be treated as an
        argument.

2013-04-07  Richard Frith-Macdonald <rfm@gnu.org>

        * EcControl.m:
	* EcAlerter.h:
	* EcAlerter.m:
        * Alaertconfig.plist:
        More restrucuturing plus addition of rules options for improving